add huawei security product page

--- a/ittech/security/security.html
+++ b/ittech/security/security.html
@@ -73,7 +73,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="hikvision/hikvision.html">海康威视</a></h3>
-						<p>华为云持续创新，携手客户，让云无处不在，让智能无所不及，共建智能世界云底座。提供给租户安全的云产品和服务，构建安全可信的云服务。</p>
+						<p>国际领先的视频监控、记录器、存储设备、测速杆、交通号志等的供应商，持续创新的软硬件产品，赋能智慧城市建设，助力企业数字化转型。</p>
 					</div>
 				</div>
 			</div>
@@ -88,9 +88,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="dahua/dahua.html">大华</a></h3>
-						<p>Orange Business Services，作为法国知名电信运营商Orange旗下的B2B分支机构，Orange Business Services扮演着网络运营商和数字服务集成商的角色，
-							在IoT、云计算、大数据和人工智能、应用开发和网络安全等领域提供专业服务。
-							Orange Business Services长期重视创新技术，业务涵盖云技术、数字化与数据、网络、智能移动服务等多个领域，是拥有多源服务集成（MSI）专业能力的全球运营商级集成商。</p>
+						<p>浙江大华技术股份有限公司是领先的监控产品供应商和解决方案服务商，面向全球提供领先的视频存储、前端、显示控制和智能交通等系列化产品。</p>
 					</div>
 				</div>
 			</div>
