--- a/ittech/network/ruijie/ruijienwtwork.html
+++ b/ittech/network/ruijie/ruijienwtwork.html
@@ -262,7 +262,7 @@
 			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
 					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/jh/" target="_blank">
-						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/6a09b6c744b14bd980640ec5b4e7847b.svg" alt="交换机" title="交换机"></div>
+						<div class="ws-pro-img"><img src="0.svg" alt="交换机" title="交换机"></div>
 						<div class="ws-procenter-title"><h2>交换机</h2></div>
 						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
@@ -272,7 +272,7 @@
 				<div class="blog-entry">
 
 					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/wx/" target="_blank" style="margin: 7px 1.3% 7px 0px;">
-						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/a6b569c1ed5b46b289ef88794cd7e3d5.svg" alt="无线" title="无线"></div>
+						<div class="ws-pro-img"><img src="1.svg" alt="无线" title="无线"></div>
 						<div class="ws-procenter-title"><h2>无线</h2></div>
 						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
@@ -281,7 +281,7 @@
 			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
 					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/ykt/" target="_blank">
-						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/cf54784e8f4f4ae98044ff8a21b735f9.svg" alt="云桌面" title="云桌面"></div>
+						<div class="ws-pro-img"><img src="2.svg" alt="云桌面" title="云桌面"></div>
 						<div class="ws-procenter-title"><h2>云桌面</h2></div>
 						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
@@ -290,7 +290,7 @@
 			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
 					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/aq/" target="_blank" style="margin: 7px 0px;">
-						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/671b1cd62b6944d9b6e312ca41ac9cb9.svg" alt="安全" title="安全"></div>
+						<div class="ws-pro-img"><img src="3.svg" alt="安全" title="安全"></div>
 						<div class="ws-procenter-title"><h2>安全</h2></div>
 						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
@@ -299,7 +299,7 @@
 			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
 					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/ly/" target="_blank">
-						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/a9e7ad5ec5134085b924e5aa600b3ed1.svg" alt="路由器" title="路由器"></div>
+						<div class="ws-pro-img"><img src="4.svg" alt="路由器" title="路由器"></div>
 						<div class="ws-procenter-title"><h2>路由器</h2></div>
 						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
@@ -308,7 +308,7 @@
 			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
 					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/wlw/" target="_blank" style="margin: 7px 1.3% 7px 0px;">
-						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/6d2899b1aa1c4166a2963b2cfb81f615.svg" alt="物联网" title="物联网"></div>
+						<div class="ws-pro-img"><img src="5.svg" alt="物联网" title="物联网"></div>
 						<div class="ws-procenter-title"><h2>物联网</h2></div>
 						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
@@ -317,7 +317,7 @@
 			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
 					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/zhjs/" target="_blank">
-						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/7d60c5caa9894f1f80431846958a3de8.svg" alt="智慧教室" title="智慧教室"></div>
+						<div class="ws-pro-img"><img src="6.svg" alt="智慧教室" title="智慧教室"></div>
 						<div class="ws-procenter-title"><h2>智慧教室</h2></div>
 						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
@@ -326,7 +326,7 @@
 			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
 					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/riil/" target="_blank" style="margin: 7px 0px;">
-						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/2cf09e18822f4f78b9bb344825155fcb.svg" alt="RIIL(统一运维)" title="RIIL(统一运维)"></div>
+						<div class="ws-pro-img"><img src="7.svg" alt="RIIL(统一运维)" title="RIIL(统一运维)"></div>
 						<div class="ws-procenter-title"><h2>RIIL(统一运维)</h2></div>
 						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
@@ -335,7 +335,7 @@
 			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
 					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/yyxt/" target="_blank">
-						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/6c7c748ff9924bcebc61e3f043b2ec91.svg" alt="身份管理" title="身份管理"></div>
+						<div class="ws-pro-img"><img src="8.svg" alt="身份管理" title="身份管理"></div>
 						<div class="ws-procenter-title"><h2>身份管理</h2></div>
 						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
