--- a/products/security/dahua/dahua.html
+++ b/products/security/dahua/dahua.html
@@ -29,8 +29,8 @@
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a href="../../../index.html" class="nav-link">首页</a></li>
 				<li class="nav-item"><a href="../../../investment.html" class="nav-link">金融保险</a></li>
-				<li class="nav-item active"><a href="../../../ittech.html" class="nav-link">企业IT技术</a></li>
-				<li class="nav-item"><a href="../../../products.html" class="nav-link">渠道拓展</a></li>
+				<li class="nav-item"><a href="../../../ittech.html" class="nav-link">企业IT技术</a></li>
+				<li class="nav-item active"><a href="../../../products.html" class="nav-link">渠道拓展</a></li>
 				<li class="nav-item"><a href="../../../gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="../../../news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="../../../about.html" class="nav-link">关于睿泽</a></li>
@@ -50,7 +50,7 @@
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
 				<a href="../../../ittech.html"><h3 class="mb-2 bread">渠道拓展</h3></a>
-				<h1 class="mb-2 bread">锐捷网络产品</h1>
+				<h1 class="mb-2 bread">大华产品中心</h1>
 				<p class="breadcrumbs">
 					<span class="mr-2"><a href="../../mobile/mobile.html">智能手机 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../../network/network.html">网络设备 <i class="ion-ios-arrow-forward"></i></a></span>
@@ -65,103 +65,6 @@
 
 
 
-<section class="ftco-section bg-light">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 text-center heading-section ftco-animate">
-				<br>
-				<h2 class="mb-4"><span>锐捷网络产品</span></h2>
-			</div>
-		</div>
-
-		<div class="row wrapper">
-
-			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
-				<div class="blog-entry">
-					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/jh/" target="_blank">
-						<div class="ws-pro-img"><img src="../../../ittech/network/ruijie/0.svg" alt="交换机" title="交换机"></div>
-						<div class="ws-procenter-title"><h2>交换机</h2></div>
-						<div class="wsp-view-more ws-procenter-more">查看更多</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
-				<div class="blog-entry">
-
-					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/wx/" target="_blank" style="margin: 7px 1.3% 7px 0px;">
-						<div class="ws-pro-img"><img src="../../../ittech/network/ruijie/1.svg" alt="无线" title="无线"></div>
-						<div class="ws-procenter-title"><h2>无线</h2></div>
-						<div class="wsp-view-more ws-procenter-more">查看更多</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
-				<div class="blog-entry">
-					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/ykt/" target="_blank">
-						<div class="ws-pro-img"><img src="../../../ittech/network/ruijie/2.svg" alt="云桌面" title="云桌面"></div>
-						<div class="ws-procenter-title"><h2>云桌面</h2></div>
-						<div class="wsp-view-more ws-procenter-more">查看更多</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
-				<div class="blog-entry">
-					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/aq/" target="_blank" style="margin: 7px 0px;">
-						<div class="ws-pro-img"><img src="../../../ittech/network/ruijie/3.svg" alt="安全" title="安全"></div>
-						<div class="ws-procenter-title"><h2>安全</h2></div>
-						<div class="wsp-view-more ws-procenter-more">查看更多</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
-				<div class="blog-entry">
-					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/ly/" target="_blank">
-						<div class="ws-pro-img"><img src="../../../ittech/network/ruijie/4.svg" alt="路由器" title="路由器"></div>
-						<div class="ws-procenter-title"><h2>路由器</h2></div>
-						<div class="wsp-view-more ws-procenter-more">查看更多</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
-				<div class="blog-entry">
-					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/wlw/" target="_blank" style="margin: 7px 1.3% 7px 0px;">
-						<div class="ws-pro-img"><img src="../../../ittech/network/ruijie/5.svg" alt="物联网" title="物联网"></div>
-						<div class="ws-procenter-title"><h2>物联网</h2></div>
-						<div class="wsp-view-more ws-procenter-more">查看更多</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
-				<div class="blog-entry">
-					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/zhjs/" target="_blank">
-						<div class="ws-pro-img"><img src="../../../ittech/network/ruijie/6.svg" alt="智慧教室" title="智慧教室"></div>
-						<div class="ws-procenter-title"><h2>智慧教室</h2></div>
-						<div class="wsp-view-more ws-procenter-more">查看更多</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
-				<div class="blog-entry">
-					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/riil/" target="_blank" style="margin: 7px 0px;">
-						<div class="ws-pro-img"><img src="../../../ittech/network/ruijie/7.svg" alt="RIIL(统一运维)" title="RIIL(统一运维)"></div>
-						<div class="ws-procenter-title"><h2>RIIL(统一运维)</h2></div>
-						<div class="wsp-view-more ws-procenter-more">查看更多</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
-				<div class="blog-entry">
-					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/yyxt/" target="_blank">
-						<div class="ws-pro-img"><img src="../../../ittech/network/ruijie/8.svg" alt="身份管理" title="身份管理"></div>
-						<div class="ws-procenter-title"><h2>身份管理</h2></div>
-						<div class="wsp-view-more ws-procenter-more">查看更多</div>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
 
 
 
@@ -170,7 +73,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 suscribete_form">
-				<a href="https://www.ruijie.com.cn"><h2>更多产品信息请点击查看锐捷网络官网</h2></a>
+				<a href="https://www.dahuatech.com/product.html"><h2>更多产品信息请点击查看大华官网</h2></a>
 				<h2>联系我们的专家 为您竭诚服务</h2>
 				<div class="container-wrap">
 					<div class="row no-gutters">
