--- a/products/security/security.html
+++ b/products/security/security.html
@@ -57,6 +57,8 @@
 					<span class="mr-2"><a href="../security/security.html">安防设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../solar/solar.html">光伏设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../battery/battery.html">储能设备 <i class="ion-ios-arrow-forward"></i></a></span>
+				</p>
+			</div>
         </div>
     </div>
 </section>
@@ -65,72 +67,42 @@
 
 <section class="ftco-section bg-light">
 	<div class="container">
-		<div id = "rowBlogs" class="row" class = "wrapper">
+		<div class="row wrapper">
 
-
-			<div class="col-md-6 col-lg-4 ftco-animate">
+			<div class="col-md-5 col-lg-6 ftco-animate wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/x90-pro" class="block-20 d-flex align-items-end" style="background-image: url('vivo/x90pro.jpg');">
+					<a href="hikvision/hikvision.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/security/hikvision/1.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="day">1099€</span>
-							<span class="yr">5台起售</span>
+							<span class="yr">NEW</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="https://www.vivo.com/es/products/x90-pro">VIVO X90 Pro</a></h3>
-						<p href="products/mobile/mobile.html">VIVO X系列2023新款高档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="https://www.vivo.com/es/products/x90-pro" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
+						<h3 class="heading"><a href="hikvision/hikvision.html">海康威视</a></h3>
+						<p>国际领先的视频监控、记录器、存储设备、测速杆、交通号志等的供应商，持续创新的软硬件产品，赋能智慧城市建设，助力企业数字化转型。</p>
 					</div>
 				</div>
 			</div>
 
 
-			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/v29-lite-5g" class="block-20 d-flex align-items-end" style="background-image: url('vivo/v29lite_1.jpg');">
+					<a href="dahua/dahua.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/security/dahua/1.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="day">359€</span>
-							<span class="yr">5台起售</span>
+							<span class="yr">NEW</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 href="https://www.vivo.com/es/products/v29-lite-5g" class="heading"><a href="#">VIVO V29 Lite</a></h3>
-						<p >VIVO 2023年新款中档机型，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="https://www.vivo.com/es/products/v29-lite-5g" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							<p class="ml-auto mb-0">
-							</p>
-						</div>
+						<h3 class="heading"><a href="dahua/dahua.html">大华</a></h3>
+						<p>浙江大华技术股份有限公司是领先的监控产品供应商和解决方案服务商，面向全球提供领先的视频存储、前端、显示控制和智能交通等系列化产品。</p>
 					</div>
 				</div>
 			</div>
 
 
-			<div class="col-md-6 col-lg-4 ftco-animate">
-				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/y35" class="block-20 d-flex align-items-end" style="background-image: url('vivo/y35.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="day">235€</span>
-							<span class="yr">5台起售</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 href="https://www.vivo.com/es/products/y35" class="heading"><a href="#">VIVO Y35</a></h3>
-						<p>VIVO Y系列2023新款低档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p  class="mb-0"><a href="https://www.vivo.com/es/products/y35" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-
+		</div>
 	</div>
 </section>
+
 
 
 <section class="ftco-intro" style="background-image: url(../../images/bg_3.jpg);" data-stellar-background-ratio="0.5">
@@ -160,11 +132,6 @@
 
 					</div>
 				</div>
-
-<!--				<p class="mb-0">Whatsapp</p>-->
-<!--				<img src="../../images/whatsappQRCode.png" style="width: auto; height: 50%">-->
-<!--				<p class="mb-0">Wechat</p>-->
-<!--				<img src="../../images/wechatQRCode.jpg" style="width: auto; height: 50%">-->
 			</div>
 		</div>
 	</div>
@@ -346,4 +313,5 @@
 
     gtag('config', 'UA-23581568-13');
 </script>
+</body>
 </html>
