add huawei solar product page

--- a/products/battery/battery.html
+++ b/products/battery/battery.html
@@ -57,6 +57,8 @@
 					<span class="mr-2"><a href="../security/security.html">安防设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../solar/solar.html">光伏设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../battery/battery.html">储能设备 <i class="ion-ios-arrow-forward"></i></a></span>
+				</p>
+			</div>
         </div>
     </div>
 </section>
@@ -65,71 +67,46 @@
 
 <section class="ftco-section bg-light">
 	<div class="container">
-		<div id = "rowBlogs" class="row" class = "wrapper">
+		<h3 class="heading text-center"><a >家用智能储能系统结构图</a></h3>
+		<a  class="block-40 d-flex align-items-end" style="background-image: url('structure.jpg');">
+		</a>
+		<div class="text bg-white p-4">
 
-
-			<div class="col-md-6 col-lg-4 ftco-animate">
-				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/x90-pro" class="block-20 d-flex align-items-end" style="background-image: url('vivo/x90pro.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="day">1099€</span>
-							<span class="yr">5台起售</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="https://www.vivo.com/es/products/x90-pro">VIVO X90 Pro</a></h3>
-						<p href="products/mobile/mobile.html">VIVO X系列2023新款高档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="https://www.vivo.com/es/products/x90-pro" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-
-			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/v29-lite-5g" class="block-20 d-flex align-items-end" style="background-image: url('vivo/v29lite_1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="day">359€</span>
-							<span class="yr">5台起售</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 href="https://www.vivo.com/es/products/v29-lite-5g" class="heading"><a href="#">VIVO V29 Lite</a></h3>
-						<p >VIVO 2023年新款中档机型，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="https://www.vivo.com/es/products/v29-lite-5g" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							<p class="ml-auto mb-0">
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-
-			<div class="col-md-6 col-lg-4 ftco-animate">
-				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/y35" class="block-20 d-flex align-items-end" style="background-image: url('vivo/y35.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="day">235€</span>
-							<span class="yr">5台起售</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 href="https://www.vivo.com/es/products/y35" class="heading"><a href="#">VIVO Y35</a></h3>
-						<p>VIVO Y系列2023新款低档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p  class="mb-0"><a href="https://www.vivo.com/es/products/y35" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-
+			<h4>模块化设计，配置灵活，安装便捷；高防护等级，部署灵活；云端监控，云边端协同，快速故障告警。</h4>
 		</div>
+
+		<div  class="row wrapper">
+			<div class="col-md-12 col-lg-6 ftco-animate">
+				<div class="blog-entry">
+					<a  class="block-20 d-flex align-items-end" style="background-image: url('residental.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">New</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a >家用智能储能系统</a></h3>
+						<p>智能组串式储能系统，5kWh模块化设计，5-30kWh灵活拓展，同时匹配户用单相和三相逆变器。</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-12 col-lg-6 ftco-animate">
+				<div class="blog-entry">
+					<a  class="block-20 d-flex align-items-end" style="background-image: url('converter.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">New</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a >储能逆变器</a></h3>
+						<p>储能逆变器应用在电网接入的储能环节，可以根据需要实现电能的双向转换与流动，是各场景储能解决方案的重要部件。</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+	</div>
 </section>
 
 
@@ -138,6 +115,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 suscribete_form">
+				<h2>户用储能解决方案</h2>
+				<h4 style="color: #f4f6f8">新能源越来越受到人们的关注与青睐，户用储能系统不仅解决了稳定用电需求，还可利用峰谷价差降低用电成本、提升光伏发电自用率等功能，是面向家庭户用场景的一体化解决方案。</h4>
+				<br>
 				<h2>商业洽谈请扫码联系</h2>
 				<div class="container-wrap">
 					<div class="row no-gutters">
@@ -299,4 +279,5 @@
 
     gtag('config', 'UA-23581568-13');
 </script>
+</body>
 </html>
