--- a/products/solar/solar.html
+++ b/products/solar/solar.html
@@ -57,77 +57,109 @@
 					<span class="mr-2"><a href="../security/security.html">安防设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../solar/solar.html">光伏设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../battery/battery.html">储能设备 <i class="ion-ios-arrow-forward"></i></a></span>
+				</p>
+			</div>
         </div>
     </div>
 </section>
 
 <section class="ftco-section bg-light">
-	<div class="container">
-		<div id = "rowBlogs" class="row" class = "wrapper">
+	<div class="container flex-wrap">
 
+		<div class="row wrapper">
+			<div class="dig_SSys_content">
+				<h1 class="dig_ssf_title text-center">家庭绿电解决方案系统架构图</h1>
 
-			<div class="col-md-6 col-lg-4 ftco-animate">
-				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/x90-pro" class="block-20 d-flex align-items-end" style="background-image: url('vivo/x90pro.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="day">1099€</span>
-							<span class="yr">5台起售</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="https://www.vivo.com/es/products/x90-pro">VIVO X90 Pro</a></h3>
-						<p href="products/mobile/mobile.html">VIVO X系列2023新款高档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="https://www.vivo.com/es/products/x90-pro" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
-					</div>
+				<div class="dig_ssf_video_box align-items-stretch">
+					<video src="v1_DeMainV2_batch-2.webm" class="dig_ssf_video align-content-md-stretch" style = "width: 100%" muted="" autoplay="" loop="" playsinline="">
+					</video>
+					<div class="palyImg" id="dig_ssf_video_palyImg"></div>
 				</div>
 			</div>
 
+			<div class="col-md-6 col-lg-3 ftco-animate">
+				<div class="blog-entry text-center">
 
-			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/v29-lite-5g" class="block-20 d-flex align-items-end" style="background-image: url('vivo/v29lite_1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="day">359€</span>
-							<span class="yr">5台起售</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 href="https://www.vivo.com/es/products/v29-lite-5g" class="heading"><a href="#">VIVO V29 Lite</a></h3>
-						<p >VIVO 2023年新款中档机型，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="https://www.vivo.com/es/products/v29-lite-5g" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							<p class="ml-auto mb-0">
-							</p>
-						</div>
-					</div>
+					<li class="dig_ssf_Bottom_item">
+						<img src="feature_01.svg" alt="feature 01">
+						<h1 class="text-center">随心发电</h1>
+						<p class = "text-center">多装多发<br>
+							组件优化发电</p>
+					</li>
+
 				</div>
 			</div>
-
-
-			<div class="col-md-6 col-lg-4 ftco-animate">
-				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/y35" class="block-20 d-flex align-items-end" style="background-image: url('vivo/y35.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="day">235€</span>
-							<span class="yr">5台起售</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 href="https://www.vivo.com/es/products/y35" class="heading"><a href="#">VIVO Y35</a></h3>
-						<p>VIVO Y系列2023新款低档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p  class="mb-0"><a href="https://www.vivo.com/es/products/y35" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
-					</div>
+			<div class="col-md-6 col-lg-3 ftco-animate">
+				<div class="blog-entry text-center">
+					<li class="dig_ssf_Bottom_item">
+						<img src="feature_02.svg" alt="feature 02">
+						<h1 class="text-center">舒心体验</h1>
+						<p>智能AI加持<br>
+							超凡低碳用电</p>
+					</li>
 				</div>
 			</div>
-
+			<div class="col-md-6 col-lg-3 ftco-animate">
+				<div class="blog-entry text-center">
+					<li class="dig_ssf_Bottom_item">
+						<img src="feature_03.svg" alt="feature 03">
+						<h1 class="text-center">省心安全</h1>
+						<p>多重用电安全<br>
+							精准呵护</p>
+					</li>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-3 ftco-animate">
+				<div class="blog-entry text-center">
+					<li class="dig_ssf_Bottom_item">
+						<img src="feature_04.svg" alt="feature 04">
+						<h1 class="text-center">安心可靠</h1>
+						<p>长久守候<br>
+							能源顾问</p>
+					</li>
+				</div>
+			</div>
 		</div>
+
+		<div class="row" class = "wrapper">
+			<div class="col-md-6 col-lg-6 ftco-animate">
+				<div class="blog-entry">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('residential.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">家庭绿电</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="https://www.vivo.com/es/products/x90-pro">家庭绿电智能光储解决方案</a></h3>
+						<p>工勘、解决方案建议书、硬件、软件，交付、运维，精匠工艺，一站式无忧体验。
+						<p>屋顶安装光伏组件，白天吸收阳光产生直流电，将直流电转化为交流电，优先供家庭负载使用。</p>
+						<p>白天储存未消纳电量，夜晚放电供家庭负载使用。</p>
+					</div>
+				</div>
+			</div>
+
+
+			<div id = "dBlogs" class="col-md-6 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('green.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">超值套餐</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="#">家庭绿电套餐</a></h3>
+						<p>适用家庭屋顶可用面积约30平方米。</p>
+						<p>智能组件 · 6kW</p>
+						<p>智能组串式储能 10kWh</p>
+						<p>智能能源控制器 6kW*1台</p>
+						<p>智能光伏 APP 1套</p>
+						<p>说明：建议零售价包含全套标准配置和设计安装费用，具体售价以实际设计安装为准。不同套餐日均发电不同，仅以30kW举例，日均发电因天气及季节原因可能在90度~120度之间波动，100度为参考平均值。</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
 </section>
 
 
@@ -290,4 +322,5 @@
 
     gtag('config', 'UA-23581568-13');
 </script>
+</body>
 </html>
